--- a/7_17PST_Copy_of_latest_sun_mar_01_unit_2_sprint_3.ipynb
+++ b/7_17PST_Copy_of_latest_sun_mar_01_unit_2_sprint_3.ipynb
@@ -1040,11 +1040,7 @@
       "metadata": {
         "id": "lFQqIdTJBSDb",
         "colab_type": "code",
-        "outputId": "aa25e72c-0d4b-43e0-c367-d97844c18598",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
+        "colab": {}
       },
       "source": [
         "'''\n",
@@ -1056,11 +1052,27 @@
         "# May use PRECISION METRIC? (instead of Accuracy in ntbk) for validation because our 2 class ratio is about 3:1; ~significant imbalance\n",
         "\n",
         "# TEST INSTRUCTION: estimate your ROC AUC validation score\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "msTnM5vffRrF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "171fc717-744f-41cd-8efd-57c75f0c44dd"
+      },
+      "source": [
         "# find how many of Pass and Failed in our train['Fail']\n",
         "y.value_counts(normalize=True)"
       ],
-      "execution_count": 14,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,7 +1086,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 37
         }
       ]
     },
