--- a/sat_Mar_7_build_2.ipynb
+++ b/sat_Mar_7_build_2.ipynb
@@ -2158,7 +2158,7 @@
       "source": [
         "df_trimmed"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -2178,16 +2178,16 @@
       "metadata": {
         "id": "NJC8tT3-cRqQ",
         "colab_type": "code",
+        "outputId": "f4146bda-c4e2-4b02-b056-ceb2b84ac981",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 184
-        },
-        "outputId": "f4146bda-c4e2-4b02-b056-ceb2b84ac981"
+        }
       },
       "source": [
         "#df_trimmed.sort_by('pokemonId', ascending = True)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -2207,14 +2207,29 @@
       "metadata": {
         "id": "wPUDkS06pHZV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "85c45ccc-a375-4eab-9575-5bffaaaa8d00"
       },
       "source": [
         "#check data distribution to see if linear model is appropriate\n",
         "df_trimmed.plot.hist() "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b52ba04d6d46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_trimmed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_trimmed' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
