--- a/3am_SUN_Mar_8_build_2.ipynb
+++ b/3am_SUN_Mar_8_build_2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1DzIT_rmgW4jsZ9cb2ZWFHiElGeTv2oCi",
-      "authorship_tag": "ABX9TyNB7xh2LU5jFvOXVN5kTLvR",
+      "authorship_tag": "ABX9TyNqr9HpATPuKuCjgQmWr1H8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4398,41 +4398,13 @@
       "metadata": {
         "id": "dekbUc4NXQc-",
         "colab_type": "code",
-        "outputId": "e81451af-130f-4cae-a0b2-df6c10519b32",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 221
-        }
+        "colab": {}
       },
       "source": [
         "df3['continent'].value_counts()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "America              150545\n",
-              "Europe               122145\n",
-              "Asia                  15617\n",
-              "Australia              3413\n",
-              "Pacific                1992\n",
-              "America/Argentina      1103\n",
-              "America/Indiana        1049\n",
-              "Africa                  104\n",
-              "Atlantic                 36\n",
-              "America/Kentucky         14\n",
-              "Indian                    3\n",
-              "Name: continent, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4625,15 +4597,78 @@
       "metadata": {
         "id": "jpLl2Osmszpk",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e729c75d-aef7-4a26-f558-d6ef062e23fb"
+      },
+      "source": [
+        "#Label encoding: using https://towardsdatascience.com/categorical-encoding-using-label-encoding-and-one-hot-encoder-911ef77fb5bd\n",
+        "\n",
+        "'''\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "# creating initial dataframe\n",
+        "bridge_types = ('Arch','Beam','Truss','Cantilever','Tied Arch','Suspension','Cable')\n",
+        "bridge_df = pd.DataFrame(bridge_types, columns=['Bridge_Types'])\n",
+        "# creating instance of labelencoder\n",
+        "labelencoder = LabelEncoder()\n",
+        "# Assigning numerical values and storing in another column\n",
+        "bridge_df['Bridge_Types_Cat'] = labelencoder.fit_transform(bridge_df['Bridge_Types'])\n",
+        "bridge_df\n",
+        "\n",
+        "----\n",
+        "Saturday     72201\n",
+        "Friday       68037\n",
+        "Wednesday    60115\n",
+        "Thursday     54257\n",
+        "Sunday       32056\n",
+        "dummy_day     9001\n",
+        "Tuesday        354\n",
+        "'''\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "# df = initial dataframe\n",
+        "# creating initial dataframe\n",
+        "daysOfWeek = ('Saturday','Friday','Wednesday','Thursday','Sunday','dummy_day','Tuesday')\n",
+        "strToNum_df = pd.DataFrame(daysOfWeek, columns=['daysOfWeek'])\n",
+        "\n",
+        "# creating instance of label_encoder\n",
+        "labelencoder = LabelEncoder()\n",
+        "\n",
+        "# Assigning numerical values and storing in another column\n",
+        "df['labelEncDays2Nums'] = labelencoder.fit_transform(df['appearedDayOfWeek'])\n",
+        "labelEncDays2Nums"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-5d2f22b3a68b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;31m# Assigning numerical values and storing in another column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'labelEncDays2Nums'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabelencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'appearedDayOfWeek'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mlabelEncDays2Nums\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_D1_nCBDvhvW",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#Label encoding: using\n",
-        "'''\n",
-        "https://colab.research.google.com/github/LambdaTheda/CheatSheets/blob/master/Data_Cleaning_and_Exploring_Cheat_Sheet.ipynb#scrollTo=-qgpc344EMzv\n",
-        "&\n",
-        "https://towardsdatascience.com/categorical-encoding-using-label-encoding-and-one-hot-encoder-911ef77fb5bd\n",
-        "'''"
+        "#label encoding using https://colab.research.google.com/github/LambdaTheda/CheatSheets/blob/master/Data_Cleaning_and_Exploring_Cheat_Sheet.ipynb#scrollTo=-qgpc344EMzv\n",
+        "\n",
+        "df['column1'] = df['column1'].cat.codes"
       ],
       "execution_count": 0,
       "outputs": []
