--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,16 +57,10 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+    "DATA_PATH = 'https://dsets.scurlock.me/DS13U2/apartments/renthop-nyc.csv'\n",
     "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'\n",
-    "    \n",
+    "\n",
     "# Ignore this Numpy warning when using Plotly Express:\n",
     "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
     "import warnings\n",
@@ -75,23 +69,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4S2wXSrFV_g4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49352, 34)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read New York City apartment rental listing data\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
-    "assert df.shape == (49352, 34)"
+    "\n",
+    "df = pd.read_csv(DATA_PATH)\n",
+    "\n",
+    "assert df.shape == (49352, 34)\n",
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +111,13 @@
     "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
     "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,9 +136,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
