--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1325,7 +1325,7 @@
         "  estimated_rent = y_predict[0]\n",
         "  coefficient = model.coef_[0]\n",
         "  print('Our estimated rent for a', int(bedrooms), 'bedroom apartement in NYC is', int(estimated_rent), '.', '\\n'\n",
-        "  'the estimated price per bedroom is', int(coefficient),'.')"
+        "  'the estimated price per bedroom is', int(coefficient),'. \\n')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1333,59 +1333,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m5TILbvXGfdl",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "4bceb1b4-a747-474f-b75d-20bc78ceae97"
-      },
-      "source": [
-        "prediction(5)"
-      ],
-      "execution_count": 132,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Our estimated rent for a 5 bedroom apartement in NYC is 6534 . \n",
-            "the estimated price per bedroom is 853 .\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ySMxtPcFKSGR",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "143f4fe8-50d7-49f2-a8ec-11592ce24cab"
-      },
-      "source": [
-        "prediction(4)"
-      ],
-      "execution_count": 133,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Our estimated rent for a 4 bedroom apartement in NYC is 5680 . \n",
-            "the estimated price per bedroom is 853 .\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "apLSY5MSLcI7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 485
+        },
+        "outputId": "5c919bb2-0312-42f8-a0be-00b12687fcd6"
+      },
+      "source": [
+        "# predict price for each unique number of bedrooms that we have 1-7\n",
+        "\n",
+        "bedrooms = np.linspace(0, 8, 9)\n",
+        "\n",
+        "for bedroom in bedrooms:\n",
+        "  predicted_price = prediction(bedroom)\n"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Our estimated rent for a 0 bedroom apartement in NYC is 2267 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 1 bedroom apartement in NYC is 3121 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 2 bedroom apartement in NYC is 3974 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 3 bedroom apartement in NYC is 4827 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 4 bedroom apartement in NYC is 5680 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 5 bedroom apartement in NYC is 6534 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 6 bedroom apartement in NYC is 7387 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 7 bedroom apartement in NYC is 8240 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n",
+            "Our estimated rent for a 8 bedroom apartement in NYC is 9094 . \n",
+            "the estimated price per bedroom is 853 . \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M0oK2NGjNCFy",
         "colab_type": "code",
         "colab": {}
       },
