--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -103,11 +103,13 @@
         "# If you're working locally:\n",
         "else:\n",
         "    DATA_PATH = '../data/'\n",
-        "    \n",
+        "\n",
         "# Ignore this Numpy warning when using Plotly Express:\n",
-        "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+        "# FutureWarning: Method .ptp is deprecated and will be removed in a future\n",
+        "# version. Use numpy.ptp instead.\n",
         "import warnings\n",
-        "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
+        "warnings.filterwarnings(action='ignore', category=FutureWarning,\n",
+        "                        module='numpy')\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -123,7 +125,7 @@
         "# Read New York City apartment rental listing data\n",
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
-        "assert df.shape == (49352, 34)"
+        "assert df.shape == (49352, 34)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -136,13 +138,13 @@
         "colab": {}
       },
       "source": [
-        "# Remove outliers: \n",
+        "# Remove outliers:\n",
         "# the most extreme 1% prices,\n",
         "# the most extreme .1% latitudes, &\n",
         "# the most extreme .1% longitudes\n",
-        "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
+        "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) &\n",
         "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
-        "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
+        "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -159,7 +161,7 @@
         "outputId": "3b6793a3-c94b-4320-fa24-d6a0a1dc53b6"
       },
       "source": [
-        "df.head()"
+        "df.head()\n"
       ],
       "execution_count": 69,
       "outputs": [
@@ -445,10 +447,10 @@
         "\n",
         "import plotly.express as px\n",
         "\n",
-        "# Generate a scatter plot between my feature (x) and my target (y) which is \n",
+        "# Generate a scatter plot between my feature (x) and my target (y) which is\n",
         "# what I will eventually want to predict\n",
         "\n",
-        "px.scatter(df, x='bedrooms', y='price', trendline='ols')"
+        "px.scatter(df, x='bedrooms', y='price', trendline='ols')\n"
       ],
       "execution_count": 70,
       "outputs": [
@@ -523,7 +525,7 @@
       "source": [
         "# 1. import linear regression estimator class\n",
         "\n",
-        "from sklearn.linear_model import LinearRegression"
+        "from sklearn.linear_model import LinearRegression\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -538,7 +540,7 @@
       "source": [
         "# 2. Instantiate the class\n",
         "\n",
-        "model = LinearRegression()"
+        "model = LinearRegression()\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -557,7 +559,7 @@
         "target = ['price']\n",
         "\n",
         "x_train = df[features]\n",
-        "y_train = df[target]"
+        "y_train = df[target]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -576,7 +578,7 @@
       "source": [
         "# Ensure X features maxtrix looks like we want it to\n",
         "\n",
-        "x_train"
+        "x_train\n"
       ],
       "execution_count": 74,
       "outputs": [
@@ -693,7 +695,7 @@
       "source": [
         "# Ensure Y target vector looks like we want it to\n",
         "\n",
-        "y_train"
+        "y_train\n"
       ],
       "execution_count": 75,
       "outputs": [
@@ -810,7 +812,7 @@
       "source": [
         "# 4. Fit the model\n",
         "\n",
-        "model.fit(x_train, y_train)"
+        "model.fit(x_train, y_train)\n"
       ],
       "execution_count": 76,
       "outputs": [
@@ -846,7 +848,7 @@
         "x_test = [[4]]\n",
         "\n",
         "y_pred = model.predict(x_test)\n",
-        "y_pred"
+        "y_pred\n"
       ],
       "execution_count": 77,
       "outputs": [
@@ -879,7 +881,7 @@
         "# Essentially tells us the \"price per bedroom\"\n",
         "# Would be the slope on the grah above\n",
         "\n",
-        "model.coef_"
+        "model.coef_\n"
       ],
       "execution_count": 78,
       "outputs": [
@@ -912,7 +914,7 @@
         "# the y-intercept of the graph above\n",
         "# the Variable \"b\" in equation y= mx +b\n",
         "\n",
-        "model.intercept_"
+        "model.intercept_\n"
       ],
       "execution_count": 79,
       "outputs": [
@@ -942,16 +944,18 @@
         "outputId": "98e6e99c-debf-4bda-d53d-2a94da96cbaa"
       },
       "source": [
-        "# define a function that predicts the rental price of an apartment base on how \n",
+        "# define a function that predicts the rental price of an apartment base on how\n",
         "# many bedrooms the apartment has\n",
+        "\n",
         "\n",
         "def predict(bedrooms):\n",
         "  y_pred = model.predict([[bedrooms]])\n",
         "  estimate = y_pred[0]\n",
         "  coefficient = model.coef_[0]\n",
-        "  print ('$', int(estimate), 'is our estimated price for', int(bedrooms), 'bedrooms in Renthop.')\n",
+        "  print ('$', int(estimate), 'is our estimated price for', int(bedrooms),\n",
+        "         'bedrooms in Renthop.')\n",
         "\n",
-        "print(predict(3))"
+        "print(predict(3))\n"
       ],
       "execution_count": 80,
       "outputs": [
@@ -989,7 +993,7 @@
         "target = ['price']\n",
         "\n",
         "x_train = df[features]\n",
-        "y_train = df[target]"
+        "y_train = df[target]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1006,7 +1010,7 @@
         "outputId": "d3bdd251-3349-4210-ae87-9d9ae78a1c30"
       },
       "source": [
-        "x_train"
+        "x_train\n"
       ],
       "execution_count": 82,
       "outputs": [
@@ -1133,7 +1137,7 @@
         "outputId": "1e00361a-2ba0-4167-90d6-4e431a322b3a"
       },
       "source": [
-        "y_train"
+        "y_train\n"
       ],
       "execution_count": 83,
       "outputs": [
@@ -1250,7 +1254,7 @@
       "source": [
         "# 4. Fit the model\n",
         "\n",
-        "model.fit(x_train, y_train)"
+        "model.fit(x_train, y_train)\n"
       ],
       "execution_count": 84,
       "outputs": [
@@ -1287,7 +1291,7 @@
         "x_test = [[bedrooms, bathrooms]]\n",
         "\n",
         "y_pred = model.predict(x_test)\n",
-        "y_pred"
+        "y_pred\n"
       ],
       "execution_count": 85,
       "outputs": [
@@ -1319,13 +1323,15 @@
       "source": [
         "# Define a function that predicts the price with 2 features\n",
         "\n",
+        "\n",
         "def prediction(bedrooms, bathrooms):\n",
         "  y_pred = model.predict([[bedrooms, bathrooms]])\n",
         "  estimate = y_pred[0]\n",
         "  coeffcient = model.coef_[0]\n",
-        "  print('$', int(estimate), 'is our estimated price for', int(bedrooms), 'bedrooms and', int(bathrooms), 'bathrooms in Renthop.')\n",
+        "  print('$', int(estimate), 'is our estimated price for', int(bedrooms),\n",
+        "        'bedrooms and', int(bathrooms), 'bathrooms in Renthop.')\n",
         "\n",
-        "print(prediction(2, 2))"
+        "print(prediction(2, 2))\n"
       ],
       "execution_count": 86,
       "outputs": [
@@ -1338,19 +1344,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kZhshBvDCph9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
